--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           </div>
       </div>
       </nav>
-      <div class="banner-text center-text d-flex flex-column justify-content-center align-items-center">
+      <div class="banner-text text-center d-flex flex-column justify-content-center align-items-center">
         <h1>welcome to sylhet</h1>
-        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam, <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam, <br>
           officiis nostrum culpa illum porro delectus dolor quas fuga? Voluptas!</p>
       </div>
     </div>
