--- a/index.html
+++ b/index.html
@@ -30,33 +30,34 @@
     </div>
     <!-- navbar -->
     <div class="container-fluid">
-      <div class="banner" style="background-image: url(assets/images/banner/banner-img.jpg);">
+      <div class="banner">
         <nav class="navbar ">
           <div class="container">
-            <a class="navbar-brand text-white fs-1 fw-semibold" href="#">Reizen</a>
+            <a class="navbar-brand text-white fs-1 fw-semibold logo" href="#">Reizen</a>
             <div class="menu" id="nav-menu">
               <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Services</a></li>
-                <li><a href="">Home</a></li>
-                <li><a href="">Home</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Places</a></li>
               </ul>
               <i class="fa-solid fa-xmark fs-2 close-menu" id="close-menu"></i>
             </div>
 
-            <form class="d-flex justify-content-end px-2 w-50" role="search">
-              <input class="form-control me-2 px-5 w-75 py-2" type="search" placeholder="Search tourist place"
+            <form class="d-flex justify-content-end px-2 form" role="search">
+              <input class="form-control  search-field" type="search" placeholder="Search tourist place"
                 aria-label="Search">
-              <i class="fa-solid fa-magnifying-glass text-white search-icon "></i>
+              <i class="fa-solid fa-magnifying-glass text-white search-icon px-2"></i>
               <button class="btn login-btn" type="submit">Login</button>
-              <i class="fa-solid fa-bars text-white fs-3 text-white ms-5 mt-2  menu-icon" id="open-menu"></i>
+              <i class="fa-solid fa-bars text-white fs-3 text-white  mt-2  menu-icon" id="open-menu"></i>
             </form>
           </div>
       </div>
       </nav>
-      <div class="banner-text text-center d-flex flex-column justify-content-center align-items-center">
-        <h1>welcome to sylhet</h1>
+      <div class="banner-text text-center">
+        <h1>Welcome to Sylhet</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam, <br>
           officiis nostrum culpa illum porro delectus dolor quas fuga? Voluptas!</p>
       </div>
@@ -66,50 +67,49 @@
   </div>
   <!-- header area end here -->
   <!-- footer area start here -->
-  <div class="container">
-    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 gx-5">
-      <div class="col-12 col-mb-3 col-lg-4">
-        <h4 class="footer-heading">About Reizen</h4>
-        <p class="footer-text mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At officiis odit minima.
-          Obcaecati explicabo hic, quisquam nulla commodi deleniti vitae repellat accusamus necessitatibus alias unde
-          consectetur sequi quas eligendi corporis debitis. Maxime ipsum repellendus repellat in necessitatibus
-          voluptatibus provident cum.</p>
+  <footer>
+    <div class="container">
+      <div class="row  py-5 my-5 gx-5">
+        <div class="col-12 col-md-6 col-lg-5">
+          <h4 class="footer-heading">About Reizen</h4>
+          <p class="footer-text mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At officiis odit minima.
+            Obcaecati explicabo hic, quisquam nulla commodi deleniti vitae repellat accusamus necessitatibus alias unde
+            consectetur sequi quas eligendi corporis debitis. Maxime ipsum repellendus repellat in necessitatibus
+            voluptatibus provident cum.</p>
+        </div>
+        <div class="col-6 col-md-3 col-lg-3 mb-3 px-5">
+          <h4 class="footer-heading ">Quick Links</h4>
+          <ul class="nav flex-column footer-items">
+            <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-muted fs-5">Hotels</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Restaurents</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Tourist Places</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Transport Cost</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Shopping Malls</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Grocsey Shops</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Famous Cloth</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Traditional Food</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-6  col-md-3 col-lg-4">
+          <h4 class="footer-heading ">Our Contact</h4>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-muted"><i class="fa-solid fa-phone px-2"></i>123456789</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="fa-solid fa-globe px-2"></i>www.reozen.com</a></li>     
+          </ul>
+        </div>
       </div>
-
-      <div class="col mb-3">
-        <h4 class="footer-heading ">Quick Links</h4>
-        <ul class="nav flex-column footer-items">
-          <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-muted fs-5">Hotels</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Restaurents</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Tourist Places</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Transport Cost</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Shopping Malls</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Grocsey Shops</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Famous Cloth</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Traditional Food</a></li>
-        </ul>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 text-center">
+          <p class="bg-dark text-capitalize footer-copy-text py-2">&copy; 2022 all rights reserved for reizen</p>
+        </div>
       </div>
-
-      <div class="col mb-3">
-        <h4>Section</h4>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-        </ul>
-      </div>
-      <div class="col mb-3">
-        <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-          <svg class="bi me-2" width="40" height="32">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-        </a>
-        <p class="text-muted">© 2022</p>
-      </div>
-    </footer>
-  </div>
+    </div>
+  </footer>
   <!-- footer area end here -->
   <script src="assets/js/index.js"></script>
   <!-- bootstrap js cdn -->
