--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +44,6 @@
               </ul>
               <i class="fa-solid fa-xmark fs-2 close-menu" id="close-menu"></i>
             </div>
-
             <form class="d-flex justify-content-end px-2 form" role="search">
               <input class="form-control  search-field" type="search" placeholder="Search tourist place"
                 aria-label="Search">
@@ -76,29 +74,35 @@
             Obcaecati explicabo hic, quisquam nulla commodi deleniti vitae repellat accusamus necessitatibus alias unde
             consectetur sequi quas eligendi corporis debitis. Maxime ipsum repellendus repellat in necessitatibus
             voluptatibus provident cum.</p>
+           <div class="social-link">
+            <a class="footer-icon " href="https://www.facebook.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/facebook.png" alt=""></a>
+            <a class="footer-icon" href="https://www.instagram.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/Instagram.webp" alt=""></a>
+            <a class="footer-icon" href="https://twitter.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/twitter.png" alt=""></a>
+            <a class="footer-icon" href="https://bd.linkedin.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/linkdin.png" alt=""></a>
+           </div>
         </div>
         <div class="col-6 col-md-3 col-lg-3 mb-3 px-5">
           <h4 class="footer-heading ">Quick Links</h4>
           <ul class="nav flex-column footer-items">
-            <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-muted fs-5">Hotels</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Restaurents</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Tourist Places</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Transport Cost</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Shopping Malls</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Grocsey Shops</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Famous Cloth</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted fs-5">Traditional Food</a></li>
+            <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-dark fs-5">Hotels</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Restaurents</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Tourist Places</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Transport Cost</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Shopping Malls</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Grocsey Shops</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Famous Cloth</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Traditional Food</a></li>
           </ul>
         </div>
-  
         <div class="col-6  col-md-3 col-lg-4">
           <h4 class="footer-heading ">Our Contact</h4>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-muted"><i class="fa-solid fa-phone px-2"></i>123456789</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="fa-solid fa-globe px-2"></i>www.reozen.com</a></li>     
+            <li class="nav-item mb-2 mt-3 fs-6"><a href="#" class="nav-link p-0 text-dark"><i class="fa-solid fa-phone px-2"></i>123456789</a></li>
+            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
+            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
+            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i class="fa-solid fa-globe px-2"></i>www.reizen.com</a></li>     
           </ul>
+          <button class="btn footer-btn">Make An Inqiary!</button>
         </div>
       </div>
     </div>
@@ -111,6 +115,7 @@
     </div>
   </footer>
   <!-- footer area end here -->
+  <!-- main js link -->
   <script src="assets/js/index.js"></script>
   <!-- bootstrap js cdn -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
