home-page-updated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,13 +32,12 @@
     <div class="container-fluid">
       <div class="banner">
         <nav class="navbar ">
-          <div class="container">
+          <div class="container nav-line">
             <a class="navbar-brand text-white fs-1 fw-semibold logo" href="#">Reizen</a>
             <div class="menu" id="nav-menu">
               <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Places</a></li>
@@ -53,17 +53,205 @@
             </form>
           </div>
       </div>
-      </nav>
-      <div class="banner-text text-center">
-        <h1>Welcome to Sylhet</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam, <br>
-          officiis nostrum culpa illum porro delectus dolor quas fuga? Voluptas!</p>
-      </div>
+    </div>
+    </nav>
+    <div class="banner-text text-center">
+      <h1>Welcome to Sylhet</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam, <br>
+        officiis nostrum culpa illum porro delectus dolor quas fuga? Voluptas!</p>
+    </div>
     </div>
     </div>
   </header>
   </div>
   <!-- header area end here -->
+  <!-- main area start here -->
+  <main>
+    <!-- about area start here -->
+    <section class="about-area pt-100 pb-100">
+      <div class="container ">
+        <!-- section-title -->
+        <div class="section-title text-center">
+          <h1 class="text-capitalize pb-1">about us</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
+        </div>
+        <div class="about-cards">
+          <div class="row row-cols-1 row-cols-md-3  g-4 card-row">
+            <div class="col card-col">
+              <div class="shadow p-3 mb-5 bg-body rounded text-center h-100">
+                <div class="card-body p-5 ">
+                  <div class="card-icon "><i class="fa-solid fa-circle-question  about-icon icon-bg-1"></i></div>
+                  <h3 class="card-title py-3">Who We Are</h3>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore
+                    cupiditate assumenda corporis doloremque voluptate fuga dolore molestias odio quod.</p>
+                  <a href="#" class="btn btn-primary common-btn mt-4">Read More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col card-col">
+              <div class="shadow p-3 mb-5 bg-body rounded text-center h-100">
+                <div class="card-body p-5">
+                  <div class="card-icon "><i class="fa-brands fa-think-peaks  about-icon icon-bg-2"></i> </div>
+                  <h3 class="card-title py-3">Our Philosopyh</h3>
+                  <p class="card-text ">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, dignissimos!
+                    Accusantium aliquam dolorem quaerat asperiores, tempora doloremque placeat nemo dolores.</p>
+                  <a href="#" class="btn btn-primary common-btn mt-4">Read More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col card-col">
+              <div class="shadow p-3 mb-5 bg-body rounded text-center h-100">
+                <div class="card-body p-5">
+                  <div class="card-icon"><i class="fa-solid fa-network-wired  about-icon icon-bg-3"></i></div>
+                  <h3 class="card-title py-3">How We Work</h3>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex autem tenetur,
+                    dolores deleniti doloremque</p>
+                  <a href="#" class="btn btn-primary common-btn mt-4">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about area start here -->
+    <!-- places area start here -->
+    <section class="pb-100">
+      <div class="container">
+        <!-- section-title -->
+        <div class="section-title text-center">
+          <h1 class="text-capitalize pb-1">places to visit</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5 card-row">
+          <div class="col">
+            <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="assets/images/places/bisnakhandi.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class="card-title places-title text-center pb-2">Bisnakhandi</h4>
+                <p class="card-text text-center text-dark"><i
+                    class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="assets/images/places/Ratargul-Swamp-Forest.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class="card-title places-title text-center pb-2">Ratargul Swamp Forest</h4>
+                <p class="card-text text-center text-dark"><i
+                    class="fa-solid fa-location-arrow px-2"></i>Ratargul,Guainghat Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="assets/images/places/niladri-lake.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class="card-title places-title text-center pb-2">Niladri</h4>
+                <p class="card-text text-center text-dark"><i
+                    class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="assets/images/places/Tanguar-Haor.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class="card-title places-title text-center pb-2">Tanguar Haor</h4>
+                <p class="card-text text-center text-dark"><i
+                    class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- places area end here -->
+    <!-- services area start here -->
+    <section class="pb-100">
+      <div class="container">
+        <!-- section-title -->
+        <div class="section-title text-center">
+          <h1 class="text-capitalize pb-1">Our Services</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
+        </div>
+        <div class="text-center card-row">
+          <div class="row gx-5 gy-2">
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+                <i class="fa-solid fa-car-side px-3"></i>Transport Cost
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+                <i class="fa-solid fa-hotel px-3"></i>Hotel
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card ">
+                <i class="fa-solid fa-utensils px-3"></i>Restaurent
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+                <i class="fa-solid fa-store px-3"></i>Shopping Mall
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+                <i class="fa-solid fa-truck-medical px-3"></i>Emergency Contact
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+                <i class="fa-solid fa-shirt px-3"></i>Famous Attire
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+                <i class="fa-solid fa-mug-saucer px-3"></i>Traditional Aliment
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+                <i class="fa-solid fa-cart-shopping px-3"></i> Grocery Shop
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="py-5 shadow p-3 mb-5 rounded service-card">
+                <i class="fa-solid fa-location-crosshairs px-3"></i>Tourist Place
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- services area end here -->
+    <!-- Gallery area start here -->
+    <section class="pb-100">
+      <div class="container">
+        <!-- section-title -->
+        <div class="section-title text-center">
+          <h1 class="text-capitalize pb-1">Our Gallery</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
+        </div>
+        <div class="row card-row">
+          <div class="col-12 col-md-4">
+            <img src="assets/images/gallery/image-1.jpeg" alt="">
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="assets/images/gallery/image-3.png" alt="">
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="assets/images/gallery/image-2.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Gallery area end here -->
+  </main>
+  <!-- main area end here -->
   <!-- footer area start here -->
   <footer>
     <div class="container">
@@ -74,12 +262,16 @@
             Obcaecati explicabo hic, quisquam nulla commodi deleniti vitae repellat accusamus necessitatibus alias unde
             consectetur sequi quas eligendi corporis debitis. Maxime ipsum repellendus repellat in necessitatibus
             voluptatibus provident cum.</p>
-           <div class="social-link">
-            <a class="footer-icon " href="https://www.facebook.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/facebook.png" alt=""></a>
-            <a class="footer-icon" href="https://www.instagram.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/Instagram.webp" alt=""></a>
-            <a class="footer-icon" href="https://twitter.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/twitter.png" alt=""></a>
-            <a class="footer-icon" href="https://bd.linkedin.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/linkdin.png" alt=""></a>
-           </div>
+          <div class="social-link">
+            <a class="footer-icon " href="https://www.facebook.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded"
+                src="assets/images/icon/facebook.png" alt=""></a>
+            <a class="footer-icon" href="https://www.instagram.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded"
+                src="assets/images/icon/Instagram.webp" alt=""></a>
+            <a class="footer-icon" href="https://twitter.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded"
+                src="assets/images/icon/twitter.png" alt=""></a>
+            <a class="footer-icon" href="https://bd.linkedin.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded"
+                src="assets/images/icon/linkdin.png" alt=""></a>
+          </div>
         </div>
         <div class="col-6 col-md-3 col-lg-3 mb-3 px-5">
           <h4 class="footer-heading ">Quick Links</h4>
@@ -97,10 +289,14 @@
         <div class="col-6  col-md-3 col-lg-4">
           <h4 class="footer-heading ">Our Contact</h4>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2 mt-3 fs-6"><a href="#" class="nav-link p-0 text-dark"><i class="fa-solid fa-phone px-2"></i>123456789</a></li>
-            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
-            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
-            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i class="fa-solid fa-globe px-2"></i>www.reizen.com</a></li>     
+            <li class="nav-item mb-2 mt-3 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
+                  class="fa-solid fa-phone px-2"></i>123456789</a></li>
+            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
+                  class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
+            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
+                  class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
+            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
+                  class="fa-solid fa-globe px-2"></i>www.reizen.com</a></li>
           </ul>
           <button class="btn footer-btn">Make An Inqiary!</button>
         </div>
