--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <input class="form-control  search-field" type="search" placeholder="Search tourist place"
                 aria-label="Search">
               <i class="fa-solid fa-magnifying-glass text-white search-icon px-2"></i>
-              <button class="btn login-btn" type="submit">Login</button>
+              <a href="login-register.html" target="_blank" class="btn login-btn" > Login</a>
               <i class="fa-solid fa-bars text-white fs-3 text-white  mt-2  menu-icon" id="open-menu"></i>
             </form>
           </div>
@@ -317,7 +317,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
-
 </body>
-
 </html>
