--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="navbar ">
           <div class="container nav-line">
             <a class="navbar-brand text-white fs-1 fw-semibold logo" href="#">Reizen</a>
-            <div class="menu" id="nav-menu">
+            <div class="menu d-none" id="nav-menu">
               <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -48,13 +48,13 @@
               <input class="form-control  search-field" type="search" placeholder="Search tourist place"
                 aria-label="Search">
               <i class="fa-solid fa-magnifying-glass text-white search-icon px-2"></i>
-              <a href="login-register.html" target="_blank" class="btn login-btn" > Login</a>
+              <a href="login-register.html" target="_blank" class="btn login-btn text-white" > Login</a>
               <i class="fa-solid fa-bars text-white fs-3 text-white  mt-2  menu-icon" id="open-menu"></i>
             </form>
           </div>
+        </nav>
       </div>
     </div>
-    </nav>
     <div class="banner-text text-center">
       <h1>Welcome to Sylhet</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam, <br>
@@ -78,7 +78,7 @@
         <div class="about-cards">
           <div class="row row-cols-1 row-cols-md-3  g-4 card-row">
             <div class="col card-col">
-              <div class="shadow p-3 mb-5 bg-body rounded text-center h-100">
+              <div class="shadow p-3 mb-5 bg-body rounded text-center h-100 hover-shadow">
                 <div class="card-body p-5 ">
                   <div class="card-icon "><i class="fa-solid fa-circle-question  about-icon icon-bg-1"></i></div>
                   <h3 class="card-title py-3">Who We Are</h3>
@@ -124,7 +124,7 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5 card-row">
-          <div class="col">
+          <div class="col place-col">
             <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
               <img src="assets/images/places/bisnakhandi.jpg" class="card-img-top card-image" alt="...">
               <div class="card-body">
@@ -134,7 +134,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col place-col">
             <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
               <img src="assets/images/places/Ratargul-Swamp-Forest.jpg" class="card-img-top card-image" alt="...">
               <div class="card-body">
@@ -144,7 +144,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col place-col">
             <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
               <img src="assets/images/places/niladri-lake.jpg" class="card-img-top card-image" alt="...">
               <div class="card-body">
@@ -154,7 +154,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col place-col">
             <div class=" h-100 shadow-lg p-3 mb-5 bg-body rounded">
               <img src="assets/images/places/Tanguar-Haor.jpg" class="card-img-top card-image" alt="...">
               <div class="card-body">
@@ -237,13 +237,13 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
         <div class="row card-row">
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4 gallery-img">
             <img src="assets/images/gallery/image-1.jpeg" alt="">
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4 gallery-img">
             <img src="assets/images/gallery/image-3.png" alt="">
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4 gallery-img">
             <img src="assets/images/gallery/image-2.jpg" alt="">
           </div>
         </div>
@@ -254,60 +254,62 @@
   <!-- main area end here -->
   <!-- footer area start here -->
   <footer>
-    <div class="container">
-      <div class="row  py-5 my-5 gx-5">
-        <div class="col-12 col-md-6 col-lg-5">
-          <h4 class="footer-heading">About Reizen</h4>
-          <p class="footer-text mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At officiis odit minima.
-            Obcaecati explicabo hic, quisquam nulla commodi deleniti vitae repellat accusamus necessitatibus alias unde
-            consectetur sequi quas eligendi corporis debitis. Maxime ipsum repellendus repellat in necessitatibus
-            voluptatibus provident cum.</p>
-          <div class="social-link">
-            <a class="footer-icon " href="https://www.facebook.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded"
-                src="assets/images/icon/facebook.png" alt=""></a>
-            <a class="footer-icon" href="https://www.instagram.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded"
-                src="assets/images/icon/Instagram.webp" alt=""></a>
-            <a class="footer-icon" href="https://twitter.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded"
-                src="assets/images/icon/twitter.png" alt=""></a>
-            <a class="footer-icon" href="https://bd.linkedin.com/"><img class="p-2 shadow p-3 mb-5 bg-body rounded"
-                src="assets/images/icon/linkdin.png" alt=""></a>
+    <div class="footer-area">
+      <div class="container">
+        <div class="row  py-5 my-5 gx-5">
+          <div class="col-12 col-md-6 col-lg-5">
+            <h4 class="footer-heading">About Reizen</h4>
+            <p class="footer-text mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At officiis odit minima.
+              Obcaecati explicabo hic, quisquam nulla commodi deleniti vitae repellat accusamus necessitatibus alias unde
+              consectetur sequi quas eligendi corporis debitis. Maxime ipsum repellendus repellat in necessitatibus
+              voluptatibus provident cum.</p>
+            <div class="social-link">
+              <a class="footer-icon " href="https://www.facebook.com/">
+                <img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/facebook.png" alt="">
+              </a>
+              <a class="footer-icon" href="https://www.instagram.com/">
+                <img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/Instagram.webp" alt="">
+              </a>
+              <a class="footer-icon" href="https://twitter.com/">
+                <img class="p-2 shadow p-3 mb-5 bg-body rounded" src="assets/images/icon/twitter.png" alt="">
+              </a>
+              <a class="footer-icon" href="https://bd.linkedin.com/">
+                <img class="p-2 shadow p-3 mb-5 bg-body rounded"src="assets/images/icon/linkdin.png" alt="">
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-6 col-md-3 col-lg-3 mb-3 px-5">
-          <h4 class="footer-heading ">Quick Links</h4>
-          <ul class="nav flex-column footer-items">
-            <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-dark fs-5">Hotels</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Restaurents</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Tourist Places</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Transport Cost</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Shopping Malls</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Grocsey Shops</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Famous Cloth</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Traditional Food</a></li>
-          </ul>
-        </div>
-        <div class="col-6  col-md-3 col-lg-4">
-          <h4 class="footer-heading ">Our Contact</h4>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2 mt-3 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
-                  class="fa-solid fa-phone px-2"></i>123456789</a></li>
-            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
-                  class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
-            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
-                  class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
-            <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
-                  class="fa-solid fa-globe px-2"></i>www.reizen.com</a></li>
-          </ul>
-          <button class="btn footer-btn">Make An Inqiary!</button>
+          <div class="col-6 col-md-3 col-lg-3 mb-3 px-5">
+            <h4 class="footer-heading ">Quick Links</h4>
+            <ul class="nav flex-column footer-items">
+              <li class="nav-item mb-2 mt-3"><a href="#" class="nav-link p-0 text-dark fs-5">Hotels</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Restaurents</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Tourist Places</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Transport Cost</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Shopping Malls</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Grocsey Shops</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Famous Cloth</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark fs-5">Traditional Food</a></li>
+            </ul>
+          </div>
+          <div class="col-6  col-md-3 col-lg-4">
+            <h4 class="footer-heading ">Our Contact</h4>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2 mt-3 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
+                    class="fa-solid fa-phone px-2"></i>123456789</a></li>
+              <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
+                    class="fa-solid fa-envelope px-2"></i>info@reizen.com</a></li>
+              <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
+                    class="fa-solid fa-map-location-dot px-2"></i>Zindabazar, Sylhet</a></li>
+              <li class="nav-item mb-2 fs-6"><a href="#" class="nav-link p-0 text-dark"><i
+                    class="fa-solid fa-globe px-2"></i>www.reizen.com</a></li>
+            </ul>
+            <button class="btn footer-btn">Make An Inqiary!</button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12 text-center">
-          <p class="bg-dark text-capitalize footer-copy-text py-2">&copy; 2022 all rights reserved for reizen</p>
-        </div>
-      </div>
+    <div class="footer-bottom bg-dark">
+          <p class="text-capitalize footer-copy-text py-2">&copy; 2022 all rights reserved for reizen</p>
     </div>
   </footer>
   <!-- footer area end here -->
