--- a/login-register.html
+++ b/login-register.html
@@ -19,24 +19,26 @@
 	<div class="main">
 		<div class="login-register-card">
 			<div class="login-register-card-title">
-				<h3><i class="fa fa-user-circle-o" ></i> User <span id="action_title">Login</span></h3>
+				<h3><i class="fa fa-user-circle-o" ></i> User <span>Login</span></h3>
 			</div>
 			<div class="login-register-card-body">
 				<div class="login-register-card-body-top">
-					<button id="login" class="btn" name="login" onclick="login()">login</button>
-					<button id="register" class="btn" name="register" onclick="register()">register</button>
+					<button id="login" class="form-btn" name="login" onclick="login()">login</button>
+					<button id="register" class="form-btn" name="register" onclick="register()">register</button>
 					<div id="pointer-btn"></div>
 				</div>
 				<div class="card-body-login">
 					<form id="login-form">
-						<input class="input-form" type="email" placeholder="Enter your email" required><br><br>
-						<input class="input-form" type="password" placeholder="Enter your password" required><br><br><br>
+						<input class="input-form" type="email" placeholder="Enter your email" required><br>
+						<input class="input-form" type="password" placeholder="Enter your password" required><br>
 						<input class="submit-form" type="submit" value="Login">
 					</form>
 					<form id="register-form">
-						<input class="input-form" type="name" placeholder="Enter your full name" required><br><br>
-						<input class="input-form" type="email" placeholder="Enter your email" required><br><br>
-						<input class="input-form" type="password" placeholder="Enter your password" required><br><br>
+						<input class="input-form" type="name" placeholder="Enter your full name" required><br>
+						<input class="input-form" type="name" placeholder="Enter User name" required><br>
+						<input class="input-form" type="email" placeholder="Enter your email" required><br>
+						<input class="input-form" type="password" placeholder="Enter your password" required><br>
+						<input class="input-form" type="password" placeholder="Confirm password" required><br>
 						<input class="submit-form" type="submit" value="Register">
 					</form>
 				</div>
