--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <i class="fa-solid fa-magnifying-glass text-white search-icon px-2"></i>
               <a href="login-register.html" target="_blank" class="btn login-btn" > Login</a>
               <div class="menu" id="nav-menu">
-                <i class="fa-solid fa-xmark fs-2 close-menu" id="close-menu"></i>
+                <i class="fa-solid fa-xmark fs-1 close-menu" id="close-menu" onclick="closeMenu()"></i>
                 <ul>
                   <li><a href="">Home</a></li>
                   <li><a href="">About</a></li>
@@ -49,7 +49,7 @@
                   <li><a href="">Places</a></li>
                 </ul>
               </div>
-              <i class="fa-solid fa-bars text-white fs-3 text-white  mt-2  menu-icon" id="open-menu"></i>
+              <i class="fa-solid fa-bars text-white text-white  mt-2  menu-icon" id="open-menu" onclick="openMenu()"></i>
         </div>
        
       </div>
@@ -80,7 +80,7 @@
   </header>
     <!-- banner area start-->
     <section class="banner">
-    <div class="banner-text mx-auto text-center">
+    <div class="banner-text text-center">
       <h1>Welcome to Sylhet</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam, <br>
         officiis nostrum culpa illum porro delectus dolor quas fuga? Voluptas!</p>
@@ -90,36 +90,31 @@
   <!-- main area start here -->
   <main>
     <!-- about area start here -->
-    <section class="about-area pt-100 pb-100">
+    <section class="about-area pt-80 pb-80">
       <div class="container ">
         <!-- section-title -->
         <div class="section-title text-center">
           <h1 class="text-capitalize pb-1">about us</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
-        <div class="about-cards">
-          <div class="row row-cols-1 row-cols-md-3  g-4 card-row">
-            <div class="col card-col">
-              <div class="shadow p-3 mb-5 bg-body rounded text-center h-100 hover-shadow">
+          <div class="row text-center ">
+            <div class="col-md-4 single-about">
                 <div class="card-body p-5 ">
-                  <div class="card-icon "><i class="fa-solid fa-circle-question  about-icon icon-bg-1"></i></div>
-                  <h3 class="card-title py-3">Who We Are</h3>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore
-                    cupiditate assumenda corporis doloremque voluptate fuga dolore molestias odio quod.</p>
-                  <a href="#" class="btn btn-primary common-btn mt-4">Read More</a>
+                    <div class="card-icon "><i class="fa-solid fa-circle-question  about-icon icon-bg-1"></i></div>
+                    <h3>Who We Are</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore
+                      cupiditate assumenda corporis doloremque voluptate fuga dolore molestias odio quod.</p>
+                    <a href="#" class="btn common-btn mt-4">Read More</a>
                 </div>
               </div>
-            </div>
-            <div class="col card-col">
-              <div class="shadow p-3 mb-5 bg-body rounded text-center h-100">
+            <div class="col-md-4 single-about">
                 <div class="card-body p-5">
                   <div class="card-icon "><i class="fa-brands fa-think-peaks  about-icon icon-bg-2"></i> </div>
-                  <h3 class="card-title py-3">Our Philosopyh</h3>
-                  <p class="card-text ">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, dignissimos!
+                  <h3>Our Philosopyh</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, dignissimos!
                     Accusantium aliquam dolorem quaerat asperiores, tempora doloremque placeat nemo dolores.</p>
-                  <a href="#" class="btn btn-primary common-btn mt-4">Read More</a>
+                  <a href="#" class="btn common-btn mt-4">Read More</a>
                 </div>
-              </div>
             </div>
             <div class="col card-col">
               <div class="shadow p-3 mb-5 bg-body rounded text-center h-100">
@@ -128,17 +123,16 @@
                   <h3 class="card-title py-3">How We Work</h3>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex autem tenetur,
                     dolores deleniti doloremque</p>
-                  <a href="#" class="btn btn-primary common-btn mt-4">Read More</a>
+                  <a href="#" class="btn common-btn mt-4">Read More</a>
                 </div>
               </div>
             </div>
           </div>
-        </div>
       </div>
     </section>
     <!-- about area start here -->
     <!-- places area start here -->
-    <section class="pb-100">
+    <section class="pb-80 pt-80">
       <div class="container">
         <!-- section-title -->
         <div class="section-title text-center">
@@ -191,7 +185,7 @@
     </section>
     <!-- places area end here -->
     <!-- services area start here -->
-    <section class="pb-100">
+    <section class="pb-80 pt-80">
       <div class="container">
         <!-- section-title -->
         <div class="section-title text-center">
@@ -251,7 +245,7 @@
     </section>
     <!-- services area end here -->
     <!-- Gallery area start here -->
-    <section class="pb-100">
+    <section class="pb-80 pb-80">
       <div class="container">
         <!-- section-title -->
         <div class="section-title text-center">
