--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <!-- font-awesome kit-->
   <script src="https://kit.fontawesome.com/42a7e449d3.js" crossorigin="anonymous"></script>
+
+  <link
+  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <!-- main css link -->
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- responsive css link -->
@@ -31,7 +34,7 @@
   <header class=" header-area header-fixed">
     <div class="container">
       <nav class="">
-        <div class="logo">
+        <div class="logo wow animate__animated animate__backInDown">
           <a class="navbar-brand text-white fs-1 fw-semibold logo" href="#">Reizen</a>
         </div>
         <div class="right-side">
@@ -58,7 +61,7 @@
     <!-- banner area start-->
     <section class="banner">
     <div class="banner-text text-center">
-      <h1>Welcome to Sylhet</h1>
+      <h1>Welcome <span class="auto-input"></span></h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam, <br>
         officiis nostrum culpa illum porro delectus dolor quas fuga? Voluptas!</p>
     </div>
@@ -74,9 +77,9 @@
           <h1 class="text-capitalize pb-1">about us</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
-          <div  class="row row-cols-1 row-cols-md-3 g-4 text-center">
-            <div class="col">
-                   <div class="h-100 p-5 single-about">
+          <div  class="row row-cols-1 row-cols-md-3 g-4 text-center wow animate__animated animate__slideInUp animate__slow">
+            <div class="col ">
+                   <div class="h-100 p-5 single-about ">
                     <div class="card-icon "><i class="fa-solid fa-circle-question  about-icon icon-bg-1"></i></div>
                     <h3>Who We Are</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore
@@ -84,7 +87,7 @@
                     <a href="#" class="btn common-btn mt-4">Read More</a>
                    </div>
               </div>
-            <div class="col">
+            <div class="col ">
                  <div class=" h-100 p-5 single-about">
                   <div class="card-icon "><i class="fa-brands fa-think-peaks  about-icon icon-bg-2"></i> </div>
                   <h3>Our Philosopyh</h3>
@@ -114,7 +117,7 @@
           <h1 class="text-capitalize pb-1">places to visit</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5 card-row text-center">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5 card-row text-center  wow animate__animated animate__slideInUp animate__slow">
           <div class="col mb-4">
             <div class=" h-100 places-card">
               <img src="assets/images/places/bisnakhandi.jpg" class="card-img-top card-image" alt="...">
@@ -158,7 +161,7 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
         <div class="text-center card-row">
-          <div class="row gx-5 gy-2">
+          <div class="row gx-5 gy-2  wow animate__animated animate__fadeInLeft animate__slow">
             <div class="col-12 col-sm-6 col-lg-4">
               <div class="py-5 service-card">
                 <i class="fa-solid fa-car-side px-3"></i>Transport Cost
@@ -217,7 +220,7 @@
           <h1 class="text-capitalize pb-1">Our Gallery</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
-        <div class="row card-row">
+        <div class="row card-row wow animate__animated wow animate__flipInX animate__slow">
           <div class="col-12 col-md-4 gallery-img">
             <img src="assets/images/gallery/image-1.jpeg" alt="">
           </div>
@@ -292,6 +295,22 @@
   <!-- footer area end here -->
   <!-- main js link -->
   <script src="assets/js/index.js"></script>
+
+  <script src="assets/js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
+
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script>
+const typed = new Typed('.auto-input', {
+strings: ['to Sylhet'],
+typeSpeed: 100,
+backSpeed: 100,
+loop: true
+
+});
+</script>
   <!-- bootstrap js cdn -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
