--- a/places.html
+++ b/places.html
@@ -68,48 +68,8 @@
   <!-- header area end here -->
   <!-- main area start here -->
   <main>
-    <!-- about area start here -->
-    <section class="about-area pt-100 pb-80">
-      <div class="container ">
-        <!-- section-title -->
-        <div class="section-title text-center">
-          <h1 class="text-capitalize pb-1">about us</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
-        </div>
-          <div  class="row row-cols-1 row-cols-md-3 g-4 text-center  wow animate__animated animate__fadeInUpBig animate__slow">
-            <div class="col">
-                   <div class="h-100 p-5 single-about single-about-1">
-                    <div class="card-icon "><i class="fa-solid fa-circle-question  about-icon icon-bg-1"></i></div>
-                    <h3>Who We Are</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore
-                      cupiditate assumenda corporis doloremque voluptate fuga dolore molestias odio quod.</p>
-                    <a href="#" class="btn common-btn mt-4">Read More</a>
-                   </div>
-              </div>
-            <div class="col ">
-                 <div class=" h-100 p-5 single-about single-about-2">
-                  <div class="card-icon "><i class="fa-brands fa-think-peaks  about-icon icon-bg-2"></i> </div>
-                  <h3>Our Philosopyh</h3>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, dignissimos!
-                    Accusantium aliquam dolorem quaerat asperiores, tempora doloremque placeat nemo dolores.</p>
-                  <a href="#" class="btn common-btn mt-4">Read More</a>
-                 </div>
-            </div>
-            <div class="col">
-                  <div class="h-100 p-5 single-about single-about-3">
-                    <div class="card-icon"><i class="fa-solid fa-network-wired  about-icon icon-bg-3"></i></div>
-                  <h3>How We Work</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex autem tenetur,
-                    dolores deleniti doloremque</p>
-                  <a href="#" class="btn common-btn mt-4">Read More</a>
-                  </div>
-            </div>
-          </div>
-      </div>
-    </section>
-    <!-- about area start here -->
     <!-- places area start here -->
-    <section class="places-area pb-80 pt-80">
+    <section class="places-area pt-100 pb-80">
       <div class="container">
         <!-- section-title -->
         <div class="section-title text-center">
@@ -117,28 +77,28 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
         </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5 card-row text-center  wow animate__animated animate__slideInUp animate__slow">
-          <div class="col">
+          <div class="col mb-5">
             <div class=" h-100 places-card">
               <img src="assets/images/places/bisnakhandi.jpg" class="card-img-top card-image" alt="...">
                 <h4 class=" places-title pb-2">Bisnakhandi</h4>
                 <p><i class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
             </div>
           </div>
-          <div class="col ">
+          <div class="col mb-5">
             <div class=" h-100 places-card">
               <img src="assets/images/places/Ratargul-Swamp-Forest.jpg" class="card-img-top card-image" alt="...">
                 <h4 class=" places-title pb-2">Ratargul Swamp Forest</h4>
                 <p><i class="fa-solid fa-location-arrow px-2"></i>Ratargul,Guainghat Sylhet</p>
             </div>
           </div>
-          <div class="col">
+          <div class="col mb-5">
             <div class=" h-100 places-card">
               <img src="assets/images/places/niladri-lake.jpg" class="card-img-top card-image" alt="...">
                 <h4 class=" places-title pb-2">Niladri</h4>
                 <p><i class="fa-solid fa-location-arrow px-2"></i>Sunamgonj,Sylhet</p>
             </div>
           </div>
-          <div class="col">
+          <div class="col mb-5">
             <div class=" h-100 places-card">
               <img src="assets/images/places/Tanguar-Haor.jpg" class="card-img-top card-image" alt="...">
               <div class="card-body">
@@ -147,92 +107,100 @@
               </div>
             </div>
           </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/sreemongal.png" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">Sreemongal</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Sreemongal,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/lalakhal.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">Lalakhal</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Lalakhal Jaintapur,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/Satchari_National_Park,.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">Sathchori National Forser</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Sathchori chunnarughat,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/Lawachara.webp" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">Lawachara</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Lawachara Srimongal,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/khadimnagar-rainforest.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">khadimnagar Rain Forest</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>khadimnagar,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/rema-kalenga-reserve.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">rema Kalenga Reserve Forest</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>chunnarughat,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/Sada-Pathor-Bholaganj-Sylhet.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">Sada Pathor</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Bholaganj,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/jaflong.jpg" class="card-img-top card-image rounded" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">Jaflong</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Jaflong Gunainghat,Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card rounded">
+              <img src="assets/images/places/lakkatura.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">lakkatura</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Sylhet</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class=" h-100 places-card">
+              <img src="assets/images/places/tahirpur.jpg" class="card-img-top card-image" alt="...">
+              <div class="card-body">
+                <h4 class=" places-title pb-2">Tahirpur</h4>
+                <p><i class="fa-solid fa-location-arrow px-2"></i>Tahirpur Sunamgonj,Sylhet</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- places area end here -->
-    <!-- services area start here -->
-    <section class="services-area pb-80 pt-80">
-      <div class="container">
-        <!-- section-title -->
-        <div class="section-title text-center">
-          <h1 class="text-capitalize pb-1">Our Services</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
-        </div>
-        <div class="text-center card-row">
-          <div class="row gx-5 gy-2  wow animate__animated animate__fadeInLeft animate__slow">
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card">
-                <i class="fa-solid fa-car-side px-3"></i>Transport Cost
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card">
-                <i class="fa-solid fa-hotel px-3"></i>Hotel
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card ">
-                <i class="fa-solid fa-utensils px-3"></i>Restaurent
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card">
-                <i class="fa-solid fa-store px-3"></i>Shopping Mall
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card">
-                <i class="fa-solid fa-truck-medical px-3"></i>Emergency Contact
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card">
-                <i class="fa-solid fa-shirt px-3"></i>Famous Attire
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card">
-                <i class="fa-solid fa-mug-saucer px-3"></i>Traditional Aliment
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card">
-                <i class="fa-solid fa-cart-shopping px-3"></i> Grocery Shop
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div class="py-5 service-card">
-                <i class="fa-solid fa-location-crosshairs px-3"></i>Tourist Place
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- services area end here -->
-    <!-- Gallery area start here -->
-    <section class="pb-80 pb-80">
-      <div class="container">
-        <!-- section-title -->
-        <div class="section-title text-center">
-          <h1 class="text-capitalize pb-1">Our Gallery</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, illum!</p>
-        </div>
-        <div class="row card-row wow animate__animated wow animate__flipInX animate__slow">
-          <div class="col-12 col-md-4 gallery-img">
-            <img src="assets/images/gallery/image-1.jpeg" alt="">
-          </div>
-          <div class="col-12 col-md-4 gallery-img">
-            <img src="assets/images/gallery/image-3.png" alt="">
-          </div>
-          <div class="col-12 col-md-4 gallery-img">
-            <img src="assets/images/gallery/image-2.jpg" alt="">
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Gallery area end here -->
   </main>
   <!-- main area end here -->
   <!-- footer area start here -->
